fix padding so that text does not overlap delete section button

--- a/src/sass/components/sections/_section.scss
+++ b/src/sass/components/sections/_section.scss
@@ -4,6 +4,7 @@
     position: relative;
 
     .edit-section-details {
+        padding-right: 150px;
         .edit-section-details-button {
             @include button($light-text-color, $go-color);
         }
